--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,7 @@
     
     .viewport .column:nth-child(2) {
         flex: 4;
+        margin: .375rem .25rem 0;
     }
     
     .panel {
@@ -200,4 +201,73 @@
     
     .marquee-view .marquee:hover {
         animation-play-state: paused;
+    }
+    
+    .point {
+        height: 4.25rem;
+    }
+    
+    .point .chart {
+        display: flex;
+        margin-top: 0.3rem;
+        justify-content: space-between;
+    }
+    
+    .point .pie {
+        width: 3.9rem;
+        height: 3rem;
+        margin-left: -0.125rem;
+    }
+    
+    .point .data {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 2.1rem;
+        padding: 0.45rem 0.375rem;
+        box-sizing: border-box;
+        background-image: url(../images/rect.png);
+        background-size: cover;
+    }
+    
+    .point h4 {
+        margin-bottom: 0.15rem;
+        font-size: 0.35rem;
+        color: #fff;
+    }
+    
+    .point span {
+        display: block;
+        color: #4c9bfd;
+        font-size: 0.2rem;
+    }
+    
+    .map {
+        height: 7.225rem;
+        margin-bottom: 0.25rem;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .map h3 {
+        line-height: 1;
+        padding: 0.2rem 0;
+        margin: 0;
+        font-size: 0.25rem;
+        color: #fff;
+        font-weight: 400;
+    }
+    
+    .map .icon-cube {
+        color: #68d8fe;
+    }
+    
+    .map .chart {
+        flex: 1;
+        background-color: rgba(255, 255, 255, 0.05);
+    }
+    
+    .map .geo {
+        width: 100%;
+        height: 100%;
     }
